# logkit

./: .gitignore  Cargo.toml  Cross.toml  README.md  release.toml
.cargo/: config.toml
apps/logkit-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/logkit-desktop/src-tauri/capabilities/: default.json
apps/logkit-desktop/src-tauri/icons/: icon.icns
apps/logkit-desktop/src-tauri/src/: lib.rs  main.rs
apps/logkit-web/app/: Cargo.toml
apps/logkit-web/app/src/: app_info.rs  browser_storage.rs  lib.rs  poll.rs  refresh.rs  version_support.rs
apps/logkit-web/app/src/api/: connection.rs  mod.rs  support.rs  worker.rs
apps/logkit-web/app/src/components/: chrome.rs  connection.rs  connection_form.rs  connection_list.rs  eps_chart.rs  layout.rs  mod.rs  toast.rs  worker_form.rs  worker_list.rs  worker_table.rs
apps/logkit-web/app/src/i18n/: mod.rs
apps/logkit-web/app/src/model/: connection.rs  mod.rs  server_version.rs  worker.rs  worker_start.rs
apps/logkit-web/app/src/pages/: connection_edit.rs  connection_form.rs  connection_new.rs  connections.rs  mod.rs  settings.rs  worker_detail.rs  worker_new.rs  workers.rs
apps/logkit-web/app/src/theme/: mod.rs
apps/logkit-web/frontend/: Cargo.toml
apps/logkit-web/frontend/src/: lib.rs
apps/logkit-web/server/: Cargo.toml
apps/logkit-web/server/src/: main.rs
assets/: agent.key  agent.pem  ocsp.key  ocsp.pem  oss.pem  server.key  server.pem
etc/: apache.access.yaml  apache.combined.file.yaml  apache.file.yaml  apache.kafka.yaml  apache.schema.yaml  apache.sink.file.yaml  apache.sink.kafka.yaml  apache.sink.yaml  apache.yaml  cef.kafka.yaml  common.yaml  instance.kafka-remote.yaml  json.file.yaml  json.kafka.yaml  kafka.agent.yaml  leefv2.kafka.yaml  leefv2.schema.yaml  leefv2.sink.yaml  leefv2.yaml  logend.toml  (+4 more)
java-ssl-pem/: Cargo.toml
java-ssl-pem/src/: error.rs  jks.rs  keystore.rs  lib.rs  pem.rs
java-ssl-pem/tests/fixtures/: keystore.jks  truststore.jks
kafka-protocol/: Cargo.toml
kafka-protocol/src/: lib.rs  main.rs
logen/: Cargo.toml  README.md
logen-config/: Cargo.toml  README.md
logen-config/assets/: conf.ref.toml
logen-config/src/: client.rs  config.rs  embed.rs  error.rs  lib.rs
logen-connection/: Cargo.toml
logen-connection/src/: connection.rs  connection_id.rs  error.rs  lib.rs  server_version.rs
logen-connection/src/client/: logend.rs  mod.rs  ping.rs  store.rs  worker.rs
logen-dsl/: Cargo.toml
logen-dsl/benches/: template_runner.rs
logen-dsl/src/: branch.rs  config_load.rs  config_merge.rs  error.rs  field_spec.rs  human_duration.rs  lib.rs  runner.rs  template.rs
logen-dsl/src/worker_config/: body.rs  branch.rs  field_spec.rs  kafka.rs  mod.rs  sink.rs  slot.rs  template.rs  worker.rs
logen-dsl/tests/: apache_access_yaml.rs  body_samples.rs  weighted_one_of.rs
logen-dsl/tests/fixtures/include/: cycle-a.yaml  cycle-b.yaml  main.yaml
logen-dsl/tests/fixtures/include/_base/: body.yaml  sink-kafka.yaml
logen-model/: Cargo.toml
logen-model-macros/: Cargo.toml
logen-model-macros/src/: lib.rs
logen-model/benches/: template_runner.rs
logen-model/src/: config_load.rs  config_merge.rs  error.rs  human_size.rs  lib.rs
logen-model/src/worker_config/: body.rs  field_spec.rs  kafka.rs  mod.rs  sink.rs  slot.rs  worker.rs
logen-model/tests/: weighted_one_of.rs
logen-model/tests/fixtures/include/: main.yaml  parent-dir.yaml
logen-model/tests/fixtures/include-shared/: body.yaml
logen-proto/: Cargo.toml  README.md  build.rs
logen-proto/proto/agent/v1/: event.proto
logen-proto/proto/logen/v1/: logen.proto
logen-proto/src/: lib.rs  version_support.rs
logen-script/: Cargo.toml
logen-script/src/: ast.rs  error.rs  eval.rs  grammar.pest  lib.rs  parse.rs  preset.rs  typecheck.rs  types.rs  value.rs
logen-worker/: Cargo.toml  README.md
logen-worker/benches/: agent_message.rs
logen-worker/src/: agent_fixtures.rs  daemon_api.rs  lib.rs  runtime.rs
logen-worker/src/sink/: context_id.rs  error.rs  file.rs  kafka.rs  kafka_agent.rs  kafka_jks.rs  log_id.rs  mod.rs  stdout.rs
logen-worker/src/sink/kafka/: client_config.rs  mod.rs  produce.rs
logen-worker/tests/: kafka_probe.rs
logen-worker/tests/fixtures/: kafka_agent_bench.yaml  kafka_agent_no_domain.yaml  kafka_asset_broker.yaml  mod.rs
logen/guide/: book.toml
logen/guide/src/: SUMMARY.md  intro.md  quick-start.md
logen/guide/src/manual/: cat.md  echo.md  list.md  ping.md  start.md  stat.md  stop.md
logen/guide/src/reference/: cli.md  config.md  troubleshooting.md
logen/src/: main.rs
logend/: Cargo.toml  README.md
logend/src/: main.rs  registry.rs  serve.rs  session.rs  start_pipeline.rs  svc.rs
logspout/: Cargo.toml  README.md
logspout-daemon/: Cargo.toml  README.md
logspout-daemon/src/: main.rs  worker.rs
logspout-dsl/: Cargo.toml  README.md
logspout-dsl/src/: builtins.rs  error.rs  human_size.rs  lib.rs  runner.rs  worker_config.rs
logspout-dsl/src/worker_config/: kafka.rs  mod.rs  sink.rs  template.rs
logspout-worker/: Cargo.toml  README.md
logspout-worker/assets/: ca.cert  ca.idx  ca.key  oss.key
logspout-worker/src/: daemon_api.rs  jks_fixture.rs  kafka_smoke.rs  lib.rs  main.rs  runtime.rs  sink.rs
logspout-worker/src/sink/: context_id.rs  file.rs  kafka.rs  kafka_agent.rs  kafka_jks.rs  mod.rs  stdout.rs
logspout-worker/tests/: kafka_probe.rs
logspout-worker/tests/fixtures/: kafka_asset_broker.yaml  mod.rs
logspout/src/: main.rs
lspt/: Cargo.toml
lspt-ext/: Cargo.toml
lspt-ext/src/: builtins.rs  error.rs  facade.rs  lib.rs  runner.rs
lspt/src/: main.rs
lsptd/: Cargo.toml
lsptd/src/: main.rs  worker.rs
tools/jumpserver/: Cargo.toml
tools/jumpserver/src/: config.rs  main.rs  proxy.rs  tls.rs
tools/kafka-protocol/: Cargo.toml
tools/kafka-protocol/src/: lib.rs
tools/kafka-ssl-gen/: Cargo.toml
tools/kafka-ssl-gen/src/: main.rs
tools/mysql-local/: Cargo.toml
tools/mysql-local/src/: main.rs
tools/mysql_local/: Cargo.toml
tools/pullout/: Cargo.toml
tools/pullout/.cargo/: config.toml
tools/pullout/src/: lib.rs  spine.rs
(+111 files in other folders)
