# logkit — 根工作区：logen（CLI）、logend、logen-dsl、logen-config、logen-proto。
[workspace]
resolver = "2"
members = [
    "java-ssl-pem",
    "logen-config",
    "logen-proto",
    "logen",
    "logend",
    "logen-branch",
    "logen-dsl",
    "logen-worker",
    "tools/resolve-oem",
    "tools/kafka-ssl-gen",
    "tools/mysql-local",
    "tools/pullout",
    "tools/jumpserver",
    "tools/kafka-agent-gen",
]

[workspace.package]
version = "1.10.0"
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
libloading = "0.8"
local-ip-address = "0.6"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"

http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5"
prost = "0.14"
rust-embed = { version = "8", features = ["include-exclude"] }
uuid = { version = "1", default-features = false, features = ["v4"] }

# Linux perf / 火焰图：带 DWARF、保留 frame pointer（配合 LOGKIT_PACK_PROFILE=release-perf）
[profile.release-perf]
inherits = "release"
debug = 1
strip = false
