# logkit — 根工作区：logen（CLI）、logend、logen-model、logen-config、logen-proto。
[workspace]
resolver = "2"
members = [
    "java-ssl-pem",
    "logen-config",
    "logen-proto",
    "logen",
    "logend",
    "logen-branch",
    "logen-model",
    "logen-model-macros",
    "logen-script",
    "logen-worker",
    "tools/resolve-oem",
    "kafka-protocol",
    "tools/mysql-local",
    "tools/pullout",
    "tools/jumpserver",
    "tools/kafka-agent-gen",
]

[workspace.package]
version = "1.11.0"
edition = "2021"
license = "AGPL-3.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
backon = "1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
criterion = "0.8"
env_logger = "0.11"
fake = { version = "5", features = ["derive", "chrono", "uuid", "url"] }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std", "alloc"] }
handlebars = "6"
hostname = "0.4"
http = "1"
http-body-util = "0.1"
humantime = "2"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
libc = "0.2"
libloading = "0.9"
local-ip-address = "0.6"
log = "0.4"
pem = "3"
pest = "2"
pest_derive = "2"
prost = "0.14"
rand = "0.10"
rdkafka = { version = "0.39", default-features = false, features = [
    "cmake-build",
    "libz",
    "ssl-vendored",
    "curl",
    "curl-static",
    "tokio",
] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rpassword = "7"
rust-embed = { version = "8", features = ["include-exclude"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", features = ["net"] }
toml = "1"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
url = "2"
uuid = { version = "1", default-features = false, features = ["v4"] }

# Linux perf / 火焰图：带 DWARF、保留 frame pointer（配合 LOGKIT_PACK_PROFILE=release-perf）
[profile.release-perf]
inherits = "release"
debug = 1
strip = false
