[package]
name = "java-ssl-pem"
description = "Java-style truststore/keystore (.jks, .p12) and PEM/DER sources → in-memory PEM text for TLS clients (Kafka-unrelated)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jks = { version = "0.3.3", default-features = false, features = ["rand"] }
pem = "3"
thiserror = { workspace = true }
