[package]
name = "java-ssl-pem"
description = "Java-style truststore/keystore (.jks) → in-memory PEM text for TLS clients (Kafka-unrelated)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pem = { workspace = true }
sha1 = "0.10"
thiserror = { workspace = true }
