[package]
name = "logen-dsl"
description = "Templates + built-in slot facades (fake-backed) for logen worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
logen-branch = { path = "../logen-branch" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fake = { version = "5", features = ["derive", "chrono", "uuid", "url"] }
handlebars = "6"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
url = "2"
humantime = "2.3.0"
