[package]
name = "logen-dsl"
description = "Templates + built-in slot facades (fake-backed) for logen worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kafka-protocol = { path = "../kafka-protocol" }
logen-branch = { path = "../logen-branch" }
chrono = { workspace = true }
fake = { workspace = true }
handlebars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
humantime = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "template_runner"
harness = false
