[package]
name = "logen-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
semver = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
