[package]
name = "logen-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
resolve-oem = { path = "../tools/resolve-oem" }
http = { workspace = true }
hyper-util = { workspace = true }
java-ssl-pem = { path = "../java-ssl-pem" }
logen-dsl = { path = "../logen-dsl" }
logen-proto = { path = "../logen-proto" }
fake = { version = "5", default-features = true }
hostname = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
rdkafka = { version = "0.39", default-features = false, features = [
  "cmake-build",
  "libz",
  "ssl-vendored",
  "curl",
  "curl-static",
  "tokio",
] }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "time"] }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
logen-dsl = { path = "../logen-dsl" }
rust-embed = { workspace = true }
