[package]
name = "logen-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
resolve-oem = { path = "../tools/resolve-oem" }
java-ssl-pem = { path = "../java-ssl-pem" }
logen-config = { path = "../logen-config" }
logen-dsl = { path = "../logen-dsl" }
logen-proto = { path = "../logen-proto" }
prost = { workspace = true }
fake = { version = "5", default-features = true }
hostname = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
rdkafka = { version = "0.39", default-features = false, features = [
  "cmake-build",
  "libz",
  "ssl-vendored",
  "curl",
  "curl-static",
  "tokio",
] }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tonic = { workspace = true }
tracing = { workspace = true }
backon = "1.6.0"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std", "alloc"] }

[dev-dependencies]
criterion = "0.8.2"
logen-dsl = { path = "../logen-dsl" }

[[bench]]
name = "agent_message"
harness = false
