[package]
name = "logen-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
resolve-oem = { path = "../tools/resolve-oem" }
java-ssl-pem = { path = "../java-ssl-pem" }
logen-config = { path = "../logen-config" }
logen-model = { path = "../logen-model" }
logen-proto = { path = "../logen-proto" }
prost = { workspace = true }
fake = { workspace = true }
hostname = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
rdkafka = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tonic = { workspace = true }
tracing = { workspace = true }
backon = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
logen-model = { path = "../logen-model" }

[[bench]]
name = "agent_message"
harness = false
