[package]
name = "logen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
logen-config = { path = "../logen-config" }
logen-proto = { path = "../logen-proto" }
rustyline = "18.0.1"
tokio = { workspace = true, features = ["macros", "net", "rt"] }
tonic = { workspace = true }
