[package]
name = "logend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flexi_logger = "0.31"
libc = "0.2"
log = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
hyper-util = { workspace = true }
logen-config = { path = "../logen-config" }
logen-dsl = { path = "../logen-dsl" }
logen-proto = { path = "../logen-proto" }
logen-worker = { path = "../logen-worker" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "sync"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
uuid = { workspace = true }
