[package]
name = "logend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libc = "0.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
hyper-util = { workspace = true }
kafka-protocol = { path = "../kafka-protocol" }
logen-config = { path = "../logen-config" }
logen-dsl = { path = "../logen-dsl" }
logen-proto = { path = "../logen-proto" }
logen-worker = { path = "../logen-worker" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "sync"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
uuid = { workspace = true }
