[package]
name = "logend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
hyper-util = { workspace = true }
logen-config = { path = "../logen-config" }
logen-proto = { path = "../logen-proto" }
logen-script = { path = "../logen-script" }
logen-worker = { path = "../logen-worker" }
logen-model = { path = "../logen-model" }
kafka-protocol = { path = "../kafka-protocol" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "sync"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
uuid = { workspace = true }
