[package]
name = "logspout-daemon"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
libc = "0.2"
clap = { workspace = true }
http = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
logspout-config = { path = "../logspout-config" }
logspout-dsl = { path = "../logspout-dsl" }
logspout-proto = { path = "../logspout-proto" }
logspout-worker = { path = "../logspout-worker" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12"
tower = "0.5"
uuid = { version = "1", default-features = false, features = ["v4"] }
