[package]
name = "logspout-daemon"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
flexi_logger = "0.31"
libc = "0.2"
log = "0.4"
clap = { workspace = true }
http = { workspace = true }
hyper-util = { workspace = true }
logspout-config = { path = "../logspout-config" }
logspout-dsl = { path = "../logspout-dsl" }
logspout-proto = { path = "../logspout-proto" }
logspout-worker = { path = "../logspout-worker" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "net", "rt-multi-thread", "sync"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
uuid = { workspace = true }
