[package]
name = "logspout-dsl"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Templates + built-in slot facades (fake-backed) for logspout worker"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fake = { version = "5", features = ["derive", "chrono", "uuid", "url"] }
handlebars = "6"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
url = "2"
