[package]
name = "logspout-worker"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
hyper-util = { workspace = true }
java-ssl-pem = { path = "../java-ssl-pem" }
# Kafka：rdkafka（librdkafka，cmake）。`ssl-vendored`：openssl-sys/vendored（便于 musl 交叉）。`curl`+`curl-static`：librdkafka 2.12 在 `WITH_OAUTHBEARER_OIDC=0` 时仍 `#ifdef WITH_OAUTHBEARER_OIDC` 包含 curl.h；宿主有 libcurl 头时不易察觉，交叉到 musl 会缺头文件，故一并静态编 curl-sys。
logspout-dsl = { path = "../logspout-dsl" }
logspout-proto = { path = "../logspout-proto" }
fake = { version = "5", default-features = true }
hostname = "0.4"
local-ip-address = "0.6"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
rdkafka = { version = "0.36", default-features = false, features = [
  "cmake-build",
  "libz",
  "ssl-vendored",
  "curl",
  "curl-static",
  "tokio",
] }
serde_yaml = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "time"] }
tonic = { workspace = true }
tower = { workspace = true }

[[bin]]
name = "logspout-kafka-probe"
path = "src/bin/logspout-kafka-probe.rs"
