[package]
name = "logspout-worker"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
async-trait = { workspace = true }
base64 = "0.22"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
http = { workspace = true }
hyper-util = { workspace = true }
java-ssl-pem = { path = "../java-ssl-pem" }
logspout-dsl = { path = "../logspout-dsl" }
logspout-proto = { path = "../logspout-proto" }
fake = { version = "5", default-features = true }
hostname = "0.4"
local-ip-address = "0.6"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
rdkafka = { version = "0.39", default-features = false, features = [
  "cmake-build",
  "libz",
  "ssl-vendored",
  "curl",
  "curl-static",
  "tokio",
] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "time"] }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
logspout-dsl = { path = "../logspout-dsl" }
rust-embed = { workspace = true }
