[package]
name = "logspout"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
clap = { workspace = true }
http = { workspace = true }
hyper-util = { workspace = true }
logspout-config = { path = "../logspout-config" }
logspout-dsl = { path = "../logspout-dsl" }
logspout-proto = { path = "../logspout-proto" }
tokio = { workspace = true, features = ["macros", "net", "rt"] }
tonic = { workspace = true }
tower = { workspace = true }
