[package]
name = "lspt-ext"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Templates + built-in slot facades (fake-backed) for lspt worker"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fake = { version = "5", features = ["derive", "chrono", "uuid", "url"] }
handlebars = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
url = "2"
