[package]
name = "lspt"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
clap = { workspace = true }
http = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
lspt-config = { path = "../lspt-config" }
lspt-proto = { path = "../lspt-proto" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tonic = "0.12"
tower = "0.5"
