[package]
name = "lsptd"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
lspt-config = { path = "../lspt-config" }
lspt-proto = { path = "../lspt-proto" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12"
tower = "0.5"
uuid = { version = "1", default-features = false, features = ["v4"] }
