[package]
name = "jumpserver"
description = "HTTP reverse proxy to HTTPS upstream with OEM mTLS (default :15440→:54400, :1940→:9400)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "jumpserver"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["server", "tokio"] }
log = { workspace = true }
pullout = { path = "../pullout" }
reqwest = { workspace = true }
resolve-oem = { path = "../resolve-oem" }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net"] }
