[package]
name = "kafka-ssl-gen"
description = "Read Kafka client.conf and write kafka.ssl.yaml sink config in cwd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
resolve-oem = { path = "../resolve-oem" }

[[bin]]
name = "kafka-ssl-gen"
path = "src/main.rs"
