[package]
name = "mysql-local"
description = "Connect to local MySQL via OEM socket with default {oem}_root user"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
resolve-oem = { path = "../resolve-oem" }
rpassword = "7"

[[bin]]
name = "mysql_local"
path = "src/main.rs"
