[package]
name = "pullout"
description = "Decrypt spine tokens via dynamically loaded librootkey_crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "pullout"
path = "src/bin/pullout.rs"

[dependencies]
base64 = { workspace = true }
libloading = { workspace = true }
resolve-oem = { path = "../resolve-oem" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
