[package]
name = "logkit-web-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos_axum = { workspace = true, optional = true, features = ["default"] }
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = ["cors"] }
logen-connection = { path = "../../../logen-connection", optional = true }
logen-proto = { path = "../../../logen-proto" }
serde = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde", "js"] }
cfg-if.workspace = true
web-sys = { version = "0.3", optional = true, features = ["Window", "Storage", "Document", "Element", "MediaQueryList"] }
wasm-bindgen = { workspace = true, optional = true }

[features]
default = []
hydrate = ["leptos/hydrate", "dep:web-sys", "dep:wasm-bindgen"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tower-http",
    "dep:logen-connection",
]
