[package]
name = "logkit-web-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
logkit-web-app = { path = "../app", default-features = false, features = ["hydrate"] }
leptos = { workspace = true, features = ["hydrate"] }
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
wasm-bindgen.workspace = true
