[package]
name = "logkit-web-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "logkit-web-server"
path = "src/main.rs"

[dependencies]
logkit-web-app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
axum.workspace = true
simple_logger.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
log.workspace = true
